# lerobot_policy_bc

./: .gitmodules  README.md  pushT_BC.ipynb  pyproject.toml
lerobot_policy_bc/: pyproject.toml
lerobot_policy_bc/src/lerobot_policy_bc/: configuration_bc.py  modeling_bc.py
src/lerobot_policy_bc/: __init__.py  configuration_bc.py  modeling_bc.py  processor_bc.py
