[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_system"

[project]
name = "lerobot-policy-bc"
version = "0.1.0"
description = "CNN-based behavior cloning policy for LeRobot"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rkothari3/lerobot_policy_bc"
